# cmake_protobufs

./: CMakeLists.txt
src/: CMakeLists.txt
src/msg_a/: CMakeLists.txt  msg_a.proto
src/msg_b/: CMakeLists.txt  msg_b.proto  msg_c.proto
